exports[`auth0 refreshUser should throw error when no credentials supplied 1`] = `"Auth0 credentials not found!"`;

exports[`auth0 refreshUser should work when no user is present in localStorage 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "args": Array [
          "/login",
        ],
        "method": "push",
      },
      "type": "@@router/CALL_HISTORY_METHOD",
    },
  ],
]
`;

exports[`auth0 refreshUser when a user is present in localStorage should handle ok token 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "idToken": "fake-token",
        "refreshToken": "ok-token",
      },
      "type": "set auth0 user",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "idToken": "fake-token",
        "refreshToken": "ok-token",
      },
      "type": "set auth0 user",
    },
  ],
]
`;

exports[`auth0 refreshUser when a user is present in localStorage should handle token that produces Auth0 error 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "refreshToken": "token-that-produces-error",
      },
      "type": "set auth0 user",
    },
  ],
  Array [
    Object {
      "payload": null,
      "type": "set auth0 user",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "args": Array [
          "/login",
        ],
        "method": "push",
      },
      "type": "@@router/CALL_HISTORY_METHOD",
    },
  ],
]
`;

exports[`auth0 setAuth0User should work 1`] = `
Object {
  "payload": Object {
    "user": "a user",
  },
  "type": "set auth0 user",
}
`;
